now able to query get accounts
